2008-05-26  Kolja Waschk <kawk>

   * src/bus/avr32.c, src/bus/buses.c, src/bus/buses.h,
     src/bus/Makefile.am, src/flash/amd.c, THANKS, configure.ac,
     doc/UrJTAG.txt, data/atmel/at32ap7000, data/atmel/at32ap7000/at32ap7000,
     data/atmel/at32ap7000/STEPPINGS, data/atmel/PARTS, data/Makefile.am:
     add support for Atmel's AT32AP7000 (by Gabor Juhos)

2008-05-24  Arnim Laeuger  <arniml@users.sourceforge.net>

   * src/tap/cable/usbblaster.c (usbblaster_connect): added missing
     malloc for cable_params

2008-05-23  Mike Frysinger  <vapier@gentoo.org>

   * data/analog/PARTS: Add BF526 id.

2008-05-21  Jie Zhang  <jie.zhang@analog.com>

   [ 1951767 ] bsdl2jtag cannot parse some bsdl files
   * src/bsdl2jtag.c (endline): Prevent `:' from being scanned in.

2008-05-21  Jie Zhang  <jie.zhang@analog.com>

   [ 1968455 ] Enter UPDATE state after register shift
   * include/chain.h (EXITMODE_UPDATE): Define.
   * src/tap/tap.c (tap_defer_shift_register): Enter Update-DR
     or Update-IR when requested.

2008-05-20  Arnim Laeuger  <arniml@users.sourceforge.net>

   * src/tap/cable/ft2232.c, src/tap/cable/usbblaster.c:
     typo in help string fixed
   * src/tap/cable/ft2232.c, src/tap/cable/usbblaster.c:
     run on top of usbconn drivers
   * src/tap/cable/cmd_xfer.c, src/tap/cable/cmd_xfer.h:
     provide command queueing functions to ft2232.c and usbblaster.c
   * src/tap/usbconn/libftd2xx.c, src/tap/usbconn/libftdi.c,
     include/usbconn/libftdx.h, src/tap/parport/ftdi.c,
     src/tap/parport/ftd2xx.c, src/tap/parport.c, src/tap/Makefile.am,
     src/tap/usbconn.c, src/tap/cable/generic_usbconn.c,
     src/tap/cable/generic_usbconn.h, doc/UrJTAG.txt:
     ftdi & ftd2xx drivers ported from parport to usbconn
   * src/tap/usbconn/libusb.c, include/usbconn.h: added read and write
   * configure.ac: --enable-parport renamed to --enable-lowlevel
     respective renaming for Makefile and C macros

2008-05-13  Kolja Waschk <kawk>
